doodle/d.css
body.april-fools {	background-image: url("d.41.png");}
body.cirno-day	{	background-image: url("d.9.png");}
body.leap-year	{	background-image: url("d.ly.png");}
body.new-year	{	background-image: url("d.ny.png");}
body,
body > *,
body > form > *,
.content > *,
.centered {
	margin: 8px auto;	/* <- centered */
	min-width: 656px;
	max-width: 1000px;
	text-align: center;
}
body,
.task input:not([type="checkbox"]):not([type="radio"]),
.task select {
	font-family: Arial, Helvetica, "Nimbus Sans L", "Liberation Sans", FreeSans, sans-serif;
	font-size: 21px;
	line-height: 28px;
}
body > *,
.content > * {
	margin: 24px auto;
}
.header,
.header + *,
.header > *,
.anno > * {
	margin: 8px 0;
}
.header::after,
.task::after,
.thread::after,
.post .image-num::after,
.post::after,
.hint::after,
.profile p::after {
	content: "";
	display: block;
	clear: both;		/* <- keep bottom line below side-floats */
}
.header > * {
	display: table;
	width: 100%;
	text-align: left;
}
.header > * > * {
	display: table-row;
	padding: 0 22px;
	vertical-align: top;
}
.header > * > u {
	display: table-cell;
}
.header > * > u:not(:first-child) {
	padding-left: 4px;
}
.header > * > u:not(:last-child) {
	padding-right: 4px;
}
.header u,
.toggle,
#task a[onclick],
#task a[href*="javascript:"] {
	text-decoration: none;
}
.header.a > * > * {
	width: 25%;
	text-align: center;
}
.header a,
.buttons a {
	white-space: nowrap;
}
.header ~ footer .hint {
	line-height: normal;
}
.menu-head {
	display: inline-block;
	position: relative;
}
.menu-head > :first-child::before {
	line-height: 50%;
	content: "\25BE\A0";
}
.menu-top {
	display: none;
	position: relative;
}
.menu-top:hover,
.menu-head:hover .menu-top,
#task-text {
	display: block;
}
.menu-hid {
	display: block;
	position: absolute;
	z-index: 888;
	top: 0;
	left: 0;
	min-width: 100%;
}
.menu-list {
	display: block;
	padding: 4px;
	border: 1px solid #aaa;
	background-color: rgba(85, 85, 85, 0.8);
	text-align: left;
	white-space: nowrap;
}
.r .menu-list {
	text-align: right;
}
.r .menu-head > :first-child::before,
.r .menu-hid {
	left: inherit;
	right: 0;
}
.buttons.r .menu-hid {
	right: -9px;
}
.buttons > *,
.buttons a,
.a.buttons {
	display: inline-block;
	text-decoration: none;
	background-color: #777;
	margin: 0;
}
.buttons > *:not(:first-child) {
	margin-left: 0.5em;
}
.buttons .menu-head > :first-child::before {
	position: absolute;
	display: block;
	line-height: 0;
	bottom: 12px;
	left: 4px;
}
.buttons .menu-list {
	padding: 8px;
}
.buttons .menu-list a~a {
	margin-top: 8px;
}
.buttons a,
.a.buttons {
	padding: 0 1em;
}
.buttons a:hover {
	background-color: #aaa;
}
.post .menu-head > :first-child::before {
	display: none;
}
.post .menu-wrap:hover,
.post .menu-head:hover,
.post .menu-top,
.post .menu-hid,
.post .menu-list {
	background-color: inherit;
	border-color: inherit;
}
/*
.post .menu-list {
	border-top-color: transparent;
}*/
.post .menu-head a {
	display: block;
	padding: 0 2px;
	color: #888;
}
.post .menu-head a:hover {
	color: #fff;
	background-color: rgba(85, 85, 85, 0.4);
}
a,
.a {
	color: #888;
}
a:hover,
a.u:hover {
	color: #000;
}
.task a,
.task .a,
.task label,
.menu-list a {
	color: #bbb;
}
.task a:hover,
.task label:hover,
.menu-list a:hover {
	color: #fff;
}
.touch,
.touch a,
.touch ~ .task a,
.touch ~ * .task a,
.touch ~ * .task.next-prev p {
	font-size: 56pt;
	line-height: 56pt;
	text-decoration: none;
}
.thread .anno,
.task.next-prev p {
	font-weight: normal;
	padding: 8px 22px;
	text-align: center;
}
.anno {
	white-space: normal;
	text-align: center;
	background-color: #ace;
	color: #fff;
}
.anno b {
	display: block;
	font-weight: normal;
}
.at,
a.at {
	background-color: #999;
	color: #eee;
}
.report,
.report b {
	background-color: #ff6244;
	color: #ff7;
}
.report.anno b {
	color: #fff;
}
.report.r b {
	display: block;
	padding: 0 1em;
}
.next-prev a {
	display: block;
	border: 5px solid transparent;
	position: absolute;
	margin: 0;
	bottom: 0;
	top: 0;
}
.next-prev .al {
	left: 0;
}
.next-prev .ar {
	right: 0;
}
.next-prev a.al:hover {
	border-left-color: #eee;
}
.next-prev a.ar:hover {
	border-right-color: #eee;
}
.next-prev a,
a.a {
	text-decoration: none;
}
.room-title {
	padding: 0 8px;
}
.room-title::after {
	display: inline-block;
	content: attr(data-title);
	vertical-align: middle;
	line-height: normal;
	font-size: small;
	max-width: 320px;
}
#thumbs {
	margin: 8px auto;
	max-width: 864px;
	text-align: left;
}
#thumbs:last-child {
	margin-bottom: 0;
}
#thumbs a {
	display: inline-block;
	background: #ddd no-repeat center;
	border: 6px solid #a0a0a0;
	width: 160px;
	height: 90px;
	line-height: 90px;
	font-size: 78px;
	text-decoration: none;
	text-align: center;
	vertical-align: middle;
}
#thumbs a:hover::after {
	display: block;
	content: attr(data-index);
	background-color: rgba(160, 160, 160, 0.6);
}
#thumbs a:hover,
.welcome a:hover {
	border-color: #09f;
}
#took {
	clear: both;
}
#took,
#took td {
	margin: 0;
	padding: 0;
	border: none;
	border-collapse: collapse;
	font-family: monospace;
	line-height: 1.4em;
	vertical-align: top;
	text-align: left;
}
#took td:nth-child(2) {
	text-align: right;
}
#took,
#task .rem,
.task label,
.hint,
li {
	font-size: 13px;
}
#task,
.task,
.thread,
.threads {
	padding: 8px 0;
	background-color: #aaa;
}
#task > .res {
	cursor: move;
}
#task > .res img[src*=res] {
	padding: 0 2px;
	border: 2px dashed #ccc;
	border-top: none;
	border-bottom: none;
}
#task > .res:hover img {
	border-color: #eee;
}
#task > img,
#task > .res img,
#task .dump {
	margin: 8px;
	vertical-align: bottom;	/* <- removes extra bottom space (sub-baseline) */
}
#task > :last-child img,
#task > :last-child {
	margin-bottom: 0;
}
#task .rem {
	font-weight: normal;
	text-align: left;
}
#task .rem > * {
	margin-left: 8px;
}
#task .dump {
	display: block;
	padding: 8px;
	padding-bottom: 0;
	line-height: normal;
}
/* ... */

